--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./static/img/icon-32.png" sizes="32x32" />
     <title>coinmarketcap crypto hodl donut</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="./dist/build.js"></script>
   </body>
 </html>
